Generate Film Razor Page thanks my script `$ ./ScriptIntegrateScaffolding film`

--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -30,6 +30,7 @@
     <div>
       <a asp-page="/Customer/ShowAll">Customers</a>
       | <a asp-page="/Article/ShowAll">Articles</a>
+      | <a asp-page="/Film/ShowAll">Film</a>
     </div>
   </body>
 </html>
