--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,6 +1,4 @@
-@page
-
-<!-- Inspired from https://docs.microsoft.com/en-us/aspnet/core/razor-pages/?view=aspnetcore-2.1&tabs=netcore-cli -->
+@page "{handler?}"
 
 @{
   ViewData["Title"] = "Home";
