Create a relationship between Article and Customer

--- a/Pages/Article/ShowAll.cshtml
+++ b/Pages/Article/ShowAll.cshtml
@@ -9,6 +9,13 @@
 
 @section Thead {
   <th>
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].FilmId)
+  </th>
+  <th>
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].Film)
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].Film.Title)
+  </th>
+  <th>
     @Html.DisplayNameFor(model => model.AbstractEntities[0].Disc)
   </th>
   <th>
