--- a/Pages/Article/_ShowAllTbody.cshtml
+++ b/Pages/Article/_ShowAllTbody.cshtml
@@ -5,6 +5,12 @@
 }
 
 <td>
+  @Html.DisplayFor(modelItem => item.FilmId)
+</td>
+<td>
+  @Html.DisplayFor(modelItem => item.Film.Title)
+</td>
+<td>
   @Html.DisplayFor(modelItem => item.Disc)
 </td>
 <td>
