--- a/Pages/Article/_FormPartialView.cshtml
+++ b/Pages/Article/_FormPartialView.cshtml
@@ -2,6 +2,15 @@
 @model Article
 
 <div class="form-group">
+  <label asp-for="FilmId" class="control-label"></label>
+  <select asp-for="FilmId" class="form-control" asp-items="ViewBag.FilmId">
+    <option value="" class="selectTagHelperFirstEmptyLine">
+      Please select one
+    </option>
+  </select>
+  <span asp-validation-for="FilmId" class="text-danger"></span>
+</div>
+<div class="form-group">
   <label asp-for="Disc" class="control-label"></label>
   <select asp-for="Disc" class="form-control"></select>
   <span asp-validation-for="Disc" class="text-danger"></span>
