In Article, load Customer and Film

--- a/Pages/Article/ShowAll.cshtml
+++ b/Pages/Article/ShowAll.cshtml
@@ -39,7 +39,11 @@
   <th>
     @Html.DisplayNameFor(model => model.AbstractEntities[0].BorrowerId)
   </th>
+  <th>
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].Borrower)
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].Borrower.Address)
+  </th>
 }
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
--->
+--
