--- a/Pages/Article/_FormPartialView.cshtml
+++ b/Pages/Article/_FormPartialView.cshtml
@@ -2,7 +2,7 @@
 @model Article
 
 <div class="form-group">
-  <label asp-for="FilmId" class="control-label"></label>
+  <label asp-for="Film" class="control-label"></label>
   <select asp-for="FilmId" class="form-control" asp-items="ViewBag.FilmId">
     <option value="" class="selectTagHelperFirstEmptyLine">
       Please select one
