--- a/Pages/Article/_ShowAllTbody.cshtml
+++ b/Pages/Article/_ShowAllTbody.cshtml
@@ -34,6 +34,9 @@
 <td>
   @Html.DisplayFor(modelItem => item.BorrowerId)
 </td>
+<td>
+  @Html.DisplayFor(modelItem => item.Borrower.Address)
+</td>
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
 -->
