--- a/Pages/Article/_DetailsPartialView.cshtml
+++ b/Pages/Article/_DetailsPartialView.cshtml
@@ -2,13 +2,16 @@
 @model Article
 
 <dt class="col-sm-2">
-  @Html.DisplayNameFor(model => model.Film)
-  <span> | </span>
-  @Html.DisplayNameFor(model => model.Film.Id)
+  @Html.DisplayNameFor(model => model.FilmId)
 </dt>
 <dd class="col-sm-10">
-  @Html.DisplayFor(model => model.Film.Id)
-  <span> | </span>
+  @Html.DisplayFor(model => model.FilmId)
+</dd>
+<dt class="col-sm-2">
+  @Html.DisplayNameFor(model => model.Film)
+  @Html.DisplayNameFor(model => model.Film.Title)
+</dt>
+<dd class="col-sm-10">
   @Html.DisplayFor(model => model.Film.Title)
 </dd>
 <dt class="col-sm-2">
@@ -54,16 +57,17 @@
   @Html.DisplayFor(model => model.ReturnDate)
 </dd>
 <dt class="col-sm-2">
-  @Html.DisplayNameFor(model => model.Borrower)
-</dt>
-<dd class="col-sm-10">
-  @Html.DisplayFor(model => model.Borrower.Address)
-</dd>
-<dt class="col-sm-2">
   @Html.DisplayNameFor(model => model.BorrowerId)
 </dt>
 <dd class="col-sm-10">
   @Html.DisplayFor(model => model.BorrowerId)
+</dd>
+<dt class="col-sm-2">
+  @Html.DisplayNameFor(model => model.Borrower)
+  @Html.DisplayNameFor(model => model.Borrower.Address)
+</dt>
+<dd class="col-sm-10">
+  @Html.DisplayFor(model => model.Borrower.Address)
 </dd>
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
