--- a/Pages/Film/Edit.cshtml
+++ b/Pages/Film/Edit.cshtml
@@ -13,7 +13,13 @@
     <input type="text" asp-for="@Model.AbstractEntity.Id" class="form-control"
         disabled />
   </div>
-  @await Html.PartialAsync("_FormPartialView", Model.AbstractEntity )
+
+  @await Html.PartialAsync("_FormPartialView", Model.AbstractEntity,
+      new ViewDataDictionary(ViewData)
+      {
+        {"NumberOfNewArticles",
+            Model.NumberOfNewArticles}
+      })
 }
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
