--- a/Pages/Film/_FormPartialView.cshtml
+++ b/Pages/Film/_FormPartialView.cshtml
@@ -1,6 +1,10 @@
 @using Videotheque.Data
 @model Film
 
+@{
+  int NumberOfNewArticles = (int)ViewData["NumberOfNewArticles"];
+}
+
 <div class="form-group">
   <label asp-for="Title" class="control-label"></label>
   <input asp-for="Title" class="form-control" />
@@ -20,6 +24,12 @@
   <label asp-for="Image" class="control-label"></label>
   <input asp-for="Image" class="form-control" />
   <span asp-validation-for="Image" class="text-danger"></span>
+</div>
+<div class="form-group">
+  <label asp-for="@NumberOfNewArticles" class="control-label"></label>
+  <!-- Generate required input with ASP.NET 2.2-->
+  <input asp-for="@NumberOfNewArticles" class="form-control" />
+  <span asp-validation-for="@NumberOfNewArticles" class="text-danger"></span>
 </div>
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
