url Customer/Edit/:id cache all inputs when submit fail

--- a/Pages/Customer/Edit.cshtml
+++ b/Pages/Customer/Edit.cshtml
@@ -19,7 +19,9 @@
         {"ValidationMessageArticleIdToBorrowArray",
             Model.ValidationMessageArticleIdToBorrowArray},
         {"ArticleIdToBorrowArrayInputValue",
-            Model.ArticleIdToBorrowArrayInputValue}
+            Model.ArticleIdToBorrowArrayInputValue},
+        {"ShouldBeRemovedArray",
+            Model.ShouldBeRemovedArray}
       })
 }
 
