--- a/Pages/Layout/_Details.cshtml
+++ b/Pages/Layout/_Details.cshtml
@@ -39,6 +39,7 @@
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.AbstractEntity.Id">Edit</a> |
+    <a asp-page="./Delete" asp-route-id="@Model.AbstractEntity.Id">Delete</a> |
     <a asp-page="./ShowAll">Back to List</a>
 </div>
 
