--- a/Pages/Layout/_Layout.cshtml
+++ b/Pages/Layout/_Layout.cshtml
@@ -11,6 +11,11 @@
       <a asp-page="/Film/ShowAll">
         @("/Film")
       </a>
+      <br />
+      Borrow and return an article in Customer page
+      <a asp-page="/Customer/ShowAll">
+        @("/Customer")
+      </a>
     </em></strong>
 }
 
