--- a/Pages/Film/_ShowAllTbody.cshtml
+++ b/Pages/Film/_ShowAllTbody.cshtml
@@ -16,6 +16,9 @@
 <td>
   @Html.DisplayFor(modelItem => item.Image)
 </td>
+<td>
+  @Html.DisplayFor(modelItem => item.Articles.Count)
+</td>
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
 -->
