--- a/Pages/Layout/_ShowAll.cshtml
+++ b/Pages/Layout/_ShowAll.cshtml
@@ -7,8 +7,7 @@
 <h3>Msg: @Model.Message</h3>
 }
 
-<!-- TODO Should become True -->
-@RenderSection("Search", required: false)
+@RenderSection("Search", required: true)
 
 <table class="table">
   <thead>
