--- a/wwwroot/styles/styles.css
+++ b/wwwroot/styles/styles.css
@@ -18,5 +18,25 @@ select[name='articleLoanDuration'] {
   max-width: 200px;
 }
 
+table {
+  margin: 1em 0 1em 0;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+thead, th {
+  background-color: #4CAF50 ;
+  color: white;
+}
+
 /* vim:sw=2:ts=2:et:fileformat=dos
  */
