Remove Entity/Receipt.cs and move InvoiceGenerated under the Page/Customer folder

--- a/Pages/Customer/ShowAll.cshtml
+++ b/Pages/Customer/ShowAll.cshtml
@@ -38,6 +38,9 @@
     @Html.DisplayNameFor(model => model.AbstractEntities[0].Lastname)
   </th>
   <th>
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].Birthdate)
+  </th>
+  <th>
     @Html.DisplayNameFor(model => model.AbstractEntities[0].Society)
   </th>
   <th>
