--- a/Pages/Customer/_FormPartialView.cshtml
+++ b/Pages/Customer/_FormPartialView.cshtml
@@ -20,6 +20,11 @@
   <span asp-validation-for="Lastname" class="text-danger"></span>
 </div>
 <div class="form-group">
+  <label asp-for="Birthdate" class="control-label"></label>
+  <input asp-for="Birthdate" class="form-control" />
+  <span asp-validation-for="Birthdate" class="text-danger"></span>
+</div>
+<div class="form-group">
   <label asp-for="Society" class="control-label"></label>
   <input asp-for="Society" class="form-control" />
   <span asp-validation-for="Society" class="text-danger"></span>
