--- a/Pages/Customer/_ShowAllTbody.cshtml
+++ b/Pages/Customer/_ShowAllTbody.cshtml
@@ -11,6 +11,9 @@
   @Html.DisplayFor(modelItem => item.Lastname)
 </td>
 <td>
+  @Html.DisplayFor(modelItem => item.Birthdate)
+</td>
+<td>
   @Html.DisplayFor(modelItem => item.Society)
 </td>
 <td>
