--- a/Pages/Customer/_DetailsPartialView.cshtml
+++ b/Pages/Customer/_DetailsPartialView.cshtml
@@ -14,6 +14,12 @@
   @Html.DisplayFor(model => model.Lastname)
 </dd>
 <dt class="col-sm-2">
+  @Html.DisplayNameFor(model => model.Birthdate)
+</dt>
+<dd class="col-sm-10">
+  @Html.DisplayFor(model => model.Birthdate)
+</dd>
+<dt class="col-sm-2">
   @Html.DisplayNameFor(model => model.Society)
 </dt>
 <dd class="col-sm-10">
